	* added support to build with libgcrypt and a shipped version of libtommath
	* optimized DHT routing table memory usage
	* optimized disk cache to work with large caches
	* support variable number of optimistic unchoke slots and to dynamically
	  adjust based on the total number of unchoke slots
	* support for BitTyrant choker algorithm

0.15 release

	* added support for explicitly flushing the disk cache
	* added torrent priority to affect bandwidth allocation for its peers
	* reduced the number of floating point operations (to better support
	  systems without FPU)
	* added new alert when individual files complete
	* added support for storing symbolic links in .torrent files
	* added support for uTorrent interpretation of multi-tracker torrents
	* handle torrents with duplicate filenames
	* piece timeouts are adjusted to download rate limits
	* encodes urls in torrent files that needs to be encoded
	* fixed not passing &supportcrypto=1 when encryption is disabled
	* introduced an upload mode, which torrents are switched into when
	  it hits a disk write error, instead of stopping the torrent.
	  this lets libtorrent keep uploading the parts it has when it
	  encounters a disk-full error for instance
	* improved disk error handling and expanded use of error_code in
	  error reporting. added a bandwidth state, bw_disk, when waiting
	  for the disk io thread to catch up writing buffers
	* improved read cache memory efficiency
	* added another cache flush algorithm to write the largest
	  contiguous blocks instead of the least recently used
	* introduced a mechanism to be lighter on the disk when checking torrents
	* applied temporary memory storage optimization to when checking
	  a torrent as well
	* removed hash_for_slot() from storage_interface. It is now implemented
	  by using the readv() function from the storage implementation
	* improved IPv6 support by announcing twice when necessary
	* added feature to set a separate global rate limit for local peers